Revert "<TextField/> - fix wrong position of info icon (#1966)"
This reverts commit 7b25cc0e402ebec70036dc09b5e83f3ea2a010dc.

--- a/src/Composite/InputAreaWithLabelComposite/InputAreaWithLabelComposite.scss
+++ b/src/Composite/InputAreaWithLabelComposite/InputAreaWithLabelComposite.scss
@@ -1,13 +1,11 @@
 @import '../../common.scss';
 
 .label {
-	display: flex;
 	margin-bottom: 6px;
 }
 
 .withLabelAttributes {
 	display: flex;
-	align-items: center;
 }
 
 .inputWrapper {
