--- a/src/FieldLabelAttributes/FieldLabelAttributes.scss
+++ b/src/FieldLabelAttributes/FieldLabelAttributes.scss
@@ -3,7 +3,6 @@
 .root {
   display: flex;
   position: relative;
-  height: 27px;
 }
 
 .required {
@@ -13,7 +12,6 @@
   width: 13px;
   line-height: 17px;
   text-align: right;
-  align-self: start;
 }
 
 .icon {
